--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "4.3.1",
+    "hyper-atom-dark-transparent": "1.1.4",
     "mdbreact": "4.13.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
